Removed sandbox from iframe.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <textarea id="htmlPanel" class="panel" placeholder="<p>Add your HTML here</p>"></textarea>
         <textarea id="cssPanel" class="panel hidden" placeholder="p { Add your CSS styling here; }"></textarea>
         <textarea id="javascriptPanel" class="panel hidden" placeholder="alert('Add your JavaScript code here');"></textarea>
-        <iframe sandbox="allow-same-origin allow-scripts" id="outputPanel" class="panel"></iframe>
+        <iframe id="outputPanel" class="panel"></iframe>
     </div>
 
     <script src="index.js"></script>
