--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
     </div>
     <div id="wrapper">
-        <textarea id="htmlPanel" class="panel" placeholder="<p>Add your HTML here</p>"></textarea>
-        <textarea id="cssPanel" class="panel hidden" placeholder="p { Add your CSS styling here; }"></textarea>
-        <textarea id="javascriptPanel" class="panel hidden" placeholder="alert('Add your JavaScript code here');"></textarea>
+        <textarea id="htmlPanel" class="panel"><p id="paragraph">Hello</p></textarea>
+        <textarea id="cssPanel" class="panel hidden"></textarea>
+        <textarea id="javascriptPanel" class="panel hidden">document.getElementById("paragraph").innerHTML = "Hello World!";</textarea>
         <iframe id="outputPanel" class="panel"></iframe>
     </div>
 
